# test-infra

./: create-caas-images.sh
ghproxy/: BUILD.bazel  ghproxy.go
ghproxy/ghcache/: ghcache.go
ghproxy/ghmetrics/: ghpath.go
hack/prowimagebuilder/: main.go
kettle/: BUILD.bazel
metrics/: BUILD.bazel
prow/: .prow-images.yaml  BUILD.bazel
prow/cmd/entrypoint/: main.go
prow/config/secret/: agent.go  agent_test.go
prow/entrypoint/: run.go
prow/external-plugins/lenses/: BUILD.bazel  main.go
prow/external-plugins/lenses/links/: BUILD.bazel  links.go
prow/external-plugins/mention/: BUILD.bazel  main.go
prow/external-plugins/mention/plugin/: mention.go
prow/gcsupload/: run.go
prow/github/: client.go
prow/hook/plugin-imports/: BUILD.bazel  plugin-imports.go
prow/plugins/: BUILD.bazel
prow/plugins/golangci-lint/: BUILD.bazel  golint.go  golint_test.go
prow/plugins/golangci-lint/data/: BUILD.bazel  data.go
prow/plugins/golangci-lint/suggestion/: BUILD.bazel  golint_suggestion.go
prow/plugins/trigger/: generic-comment.go
robots/commenter/: BUILD.bazel  main.go  main_test.go
