package(default_visibility = ["//visibility:public"])

load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library",
    "go_test",
)

go_test(
    name = "go_default_test",
    srcs = ["golint_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//prow/config:go_default_library",
        "//prow/git/localgit:go_default_library",
        "//prow/git/v2:go_default_library",
        "//prow/github:go_default_library",
        "//prow/plugins:go_default_library",
        "//prow/plugins/golangci-lint/data:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["golint.go"],
    importpath = "k8s.io/test-infra/prow/plugins/golangci-lint",
    deps = [
        "//prow/config:go_default_library",
        "//prow/genfiles:go_default_library",
        "//prow/git/v2:go_default_library",
        "//prow/github:go_default_library",
        "//prow/pluginhelp:go_default_library",
        "//prow/plugins:go_default_library",
        "//prow/plugins/golangci-lint/data:go_default_library",
        "//prow/plugins/golangci-lint/suggestion:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//prow/plugins/golangci-lint/data:all-srcs",
        "//prow/plugins/golangci-lint/suggestion:all-srcs",
    ],
    tags = ["automanaged"],
)
